[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyorbit-tools"
version = "0.0.1"
authors = [
  { name="Austin Hoover", email="hooveram@ornl.gov" },
]
description = "PyORBIT3 simulation tools"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hydra-core",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scipy>=1.14.1",
    "tqdm>=4.66.5",
]

[project.urls]
Homepage = "https://github.com/austin-hoover/pyorbit-tools"
