[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyorbit-tools"
authors = [
  { name="Austin Hoover", email="hooveram@ornl.gov" },
]
description = "PyORBIT3 simulation tools"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/austin-hoover/pyorbit-tools"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "orbit_tools.__version__"}
